# openarm_gripette_model

./: README.md  postprocess_mujoco.py  pyproject.toml
openarm_gripette_model/: __init__.py
openarm_gripette_model/openarm_right/: config.json  robot.urdf  robot.xml  scene.xml
openarm_gripette_model/openarm_right/assets/: backplate.stl  distal.stl  gripper_base.stl  proximal_bottom.stl  proximal_side.stl  proximal_top.stl
openarm_gripette_model/openarm_right/assets/merged/: distal_visual.stl  dm_j4310_1_2_step_2_collision.stl  dm_j4310_1_2_step_collision.stl  dm_j4340_2_step_collision.stl  dm_j8009p_2_step_1_visual.stl  feetech_sts3215__configuration_default_visual.stl  hfsb6_6060_750_1_step_visual.stl  j2_b_2_step_visual.stl  j6_a_3_step_collision.stl  j7_e_2_step_visual.stl
