[project]
name = "openarm-gripette-model"
version = "0.1.0"
description = "OpenArm Gripette robot model (URDF, MuJoCo XML, mesh assets)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["onshape-to-robot>=1.8.1",
              "pybullet>=3.2.7",
              "mujoco>=3.6",]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include all data files (URDF, XML, STL, JSON) in the package
packages = ["openarm_gripette_model"]
artifacts = ["*.stl", "*.urdf", "*.xml", "*.json", "*.part"]
